Support adding the sequence ID to messages #550